syntax = "proto3";

package masstasker;

option go_package = "mkm.pub/masstasker/pkg/proto;masstasker";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service MassTasker {
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Query(QueryRequest) returns (QueryResponse);

  rpc Debug(DebugRequest) returns (DebugResponse);
}

message UpdateRequest {
  repeated Task created = 1;
  repeated TaskRef deleted = 2;
  repeated uint64 predicates = 3;
}

message UpdateResponse { repeated uint64 created_ids = 1; }

message Task {
  uint64 id = 1;
  string group = 2;
  google.protobuf.Any data = 3;
  map<string, string> labels = 4;
  google.protobuf.Timestamp not_before = 5;

  // optional error annotation, useful when moving tasks to an error queue.
  // If you need a more structured error please encode it in the payload.
  string error = 6;
}

message TaskRef {
  oneof sel {
    uint64 id = 1;
    LabelSelector selector = 2;
  }
}

message LabelSelector { map<string, string> labels = 1; }

message QueryRequest {
  string group = 1;
  google.protobuf.Timestamp now = 4;
  google.protobuf.Duration own_for = 3;
  bool wait = 5;
}

message QueryResponse { Task task = 1; }

///

message DebugRequest {
  string group = 1;
  uint64 limit = 2;
}

message DebugResponse {
  repeated Task tasks = 1;
  uint64 num_tasks = 2;
}

message Test { string foo = 1; }
